Fixes to aJAX, getting rid of repeats, added copyright info. Site overall is running very smoothly now.

--- a/Final/style.css
+++ b/Final/style.css
@@ -1,4 +1,4 @@
-/****** © Copyright 2015 www.thingsstockbrokerssay.com - All Rights Reserved 
+/****** Copyright © 2015 www.thingsstockbrokerssay.com - All Rights Reserved 
 /******Property of Gale Technologies LLC www.galetechnologiesllc.com*******/
 a.main:link {
     text-decoration: none;
